--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shadow</title>
+    <title>WildBuck</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
@@ -31,19 +31,19 @@
                 <img src="https://yt3.ggpht.com/I_-x6Q1ssKK3pnTXTmsSUPE7mQrCtE08496XydhxlalN81C1qIDY1c4YCD7ODME590MN7BCl=s88-c-k-c0x00ffffff-no-rj" alt="">
             </div>
         </div>
-        <div class="name">Shadow</div>
-        <div class="about">NARUTOOOOOOO</div>
+        <div class="name">WildBuck051</div>
+        <div class="about">Lets go Brandon</div>
         <div class="wrapper">
             <div class="button">
-                <a target="_blank" href="https://www.youtube.com/channel/UChX2wlBSAYvXX2HP8xyiOcQ" class="alink">
+                <a target="_blank" href="https://www.youtube.com/channel/UCLPcNLN289C4YTGY8TVUYVA" class="alink">
                     <div class="icon"><i class="fab fa-youtube"></i></div>
-                    <span>Shadow</span>
+                    <span>Youtube</span>
                 </a>
             </div>
             <div class="button">
                 <a target="_blank" href="https://www.youtube.com/channel/UCMMePApqYAWfe5mkGe6KuQQ" class="alink">
                     <div class="icon"><i class="fab fa-youtube"></i></div>
-                    <span>SOON</span>
+                    <span>CODM</span>
                 </a>
             </div>
             <div class="button">
