--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="ohraniceni noselect">
         <div class="img-area">
             <div class="inner-area">
-                <img src="https://yt3.ggpht.com/I_-x6Q1ssKK3pnTXTmsSUPE7mQrCtE08496XydhxlalN81C1qIDY1c4YCD7ODME590MN7BCl=s88-c-k-c0x00ffffff-no-rj" alt="">
+                <img src="https://i.imgur.com/2QtqTgv.jpg" alt="">
             </div>
         </div>
         <div class="name">WildBuck051</div>
